removing xcode user files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 DerivedData/
 .DS_Store
-PushNavigation.xcodeproj/project.xcworkspace/xcuserdata/development.xcuserdatad/
+PushNavigation.xcodeproj/project.xcworkspace/xcuserdata/
+PushNavigation.xcodeproj/xcuserdata/
